--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,6 +14,7 @@ jobs:
         with:
           node-version: '14.x'
       - run: npm ci
+      - run: npm run build
       - run: npm run deploy
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
