--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@rollup/plugin-node-resolve": "^11.0.0",
     "@rollup/plugin-typescript": "^8.0.0",
     "@tsconfig/svelte": "^1.0.0",
+    "@types/node": "^14.14.39",
     "gh-pages": "^3.1.0",
     "rollup": "^2.3.4",
     "rollup-plugin-css-only": "^3.1.0",
@@ -29,7 +30,6 @@
     "tslib": "^2.0.0",
     "typescript": "^4.0.0"
   },
-  "dependencies": {},
   "repository": {
     "type": "git",
     "url": "https://github.com/mmamedel/stopwatch4.git"
